mcabber (1.0.1)

 * [PGP] Improved PGP-encryption support
 * [PGP] Improved support for GnuPG v2+
 * [PGP] Encrypt messages with our own PGP key and decrypt our own
   encrypted messages when Carbons are enabled
 * [PGP] New PGP options: 'gpg_path' and 'gpg_home' (Holger Weiß)
 * [PGP] Check all signatures and stop immediately if one could be verified (Sven Gaerner)
 * Improved Carbons support (Holger Weiß)
 * New option: 'clear_unread_on_carbon' (Holger Weiß)
 * Improve SSL fingerprint management;
   Display the server SSL fingerprint when we connect
 * Use XDG configuration directory if it contains a configuration file
 * Fix a few memory leaks
 * Fix external password support (especially on OS X)
 * Fix resizing when mcabber is built with --enable-sigwinch
 * Fix reading of history log files w/o LF character (Sam Whited)
 * Minor documentation updates
 * Other misc. bugfixes and cleanups

 -- Mikael, 2016-01-27

mcabber (1.0.0)

 * Message Carbons support / XEP-0280 (Roeland Jago Douma)
 * Support for using external password managers (Christian Burkert)
 * [UI] Add a backward completion (Oleg)
 * [UI] Multilanguage spell checking (Dmitry Potapov)
 * [UI] New option 'buffer_smart_scrolling' to lock buffer automatically
   when scrolled up (Hermitifier)
 * [UI] New command /roster next_open_buffer
 * [UI] New option 'attention_char'
 * [UI] Try to display the GLib warnings in the log window
 * [UI] Display the number of occupants in MUC rooms (shizeeque)
 * [UI] New option switch /room topic -u to unescape the topic (shizeeque)
 * [MUC] Support for storing MUC room passwords (Nico Golde)
 * [MUC] Use bookmarked password (if any) when using "/room join"
 * [Hooks] New "hook-mdr-received" hook
 * Remove support for obsolete XEP 22 (Frank Zschockelt)
 * Misc. bugfixes and minor improvements

 -- Mikael, 2015-06-28

mcabber (0.10.3)

 * [UI] Add option 'iq_time_hide'
 * [UI] Add 'iq_version_hide_os', 'iq_version_hide_version'